# Your-next-opponent-is-you

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml
research/: AGENTS.md  README.md  atomic-correction-form-2026-07-15.md  authorship-receipt-2026-07-18.md  bounded-private-persona-pilot-2026-07-18.md  codex-content-pilot-2026-07-16.md  codex-metadata-inventory-2026-07-16.md  cognitive-core-hypothesis.md  concept.md  convergence-map.md  conversation-record.md  decision-log.md  deep-research-prompts.md  deep-research-round-01-synthesis-2026-07-15.md  deep-research-round-02-synthesis-2026-07-15.md  fixed-memory-judgment-harvester-2026-07-18.md  formula-flow-defect-review-2026-07-17.md  hivemind-actions-case-study.md  landscape.md  model-and-evaluation.md  observable-action-pilot-2026-07-19.md  open-questions.md  original-proposal.md  persona-adoption-similarity-roadmap-2026-07-20.md  persona-annotation-feasibility-pilot-2026-07-16.md  persona-etiketleme-kilavuzu-tr.md  persona-evolution-checkpoint-2026-07-20.md  progress-gap-assessment-2026-07-15.md  report-review-2026-07-15.md  source-ledger.md  v1-8-runtime-record-2026-07-18.md  v1-implementation-record-2026-07-15.md  v1-threat-model-2026-07-15.md
scripts/: check-source-limits.py  export-all-markdown.ps1  grant-runtime-role.sql  start-local-extractor.ps1
src/ynoy/: core.py  (+47 more)
tests/: conftest.py  test_archive_and_corpus.py  test_atomic_audit_integration.py  test_benchmark_protocol.py  test_canonical_admission.py  test_canonical_roundtrip_integration.py  test_cli_acceptance.py  (+109 more)
(+262 files in other folders)
